Bug 764249 - Fix the non-reentrant-closure fix in bug 762473 (r=dvander)